[package]
name = "lidar_reader"
version = "0.1.0"
edition = "2024"

[features]
default = []
# Enables the `lidar_viewer` binary (3D point-cloud window).
viewer = ["dep:minifb", "dep:glam"]

[dependencies]
if-addrs = "0.13"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "macros", "sync"] }
tracing = "0.1"
glam = { version = "0.29", optional = true }
minifb = { version = "0.27", optional = true }

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "lidar_reader"
path = "src/main.rs"

[[bin]]
name = "lidar_viewer"
path = "src/bin/lidar_viewer.rs"
required-features = ["viewer"]
